--- a/api/docker-compose.cloud.yml
+++ b/api/docker-compose.cloud.yml
@@ -17,10 +17,10 @@
 services:
     postgres:
         image: postgres:16-alpine
-        container_name: zemfyre-postgres
+        container_name: iotistic-postgres
         restart: unless-stopped
         environment:
-            - POSTGRES_DB=zemfyre
+            - POSTGRES_DB=iotistic
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=${DB_PASSWORD:-postgres}
             - POSTGRES_INITDB_ARGS=-E UTF8
@@ -28,7 +28,7 @@ services:
             - "${DB_PORT_EXT:-5432}:5432"
         volumes:
             - zemfyre-pg-data:/var/lib/postgresql/data
-            - ./api/database/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
+            - ./database/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U postgres"]
             interval: 10s
@@ -38,11 +38,10 @@ services:
            - zemfyre-net
 
     api:
-        image: iotistic/zemfyre-api:${DOCKER_TAG:-latest}-${DEVICE_TYPE:-pi4}
         build:
-            context: ./api
+            context: .
             dockerfile: Dockerfile
-        container_name: zemfyre-api
+        container_name: iotistic-api
         restart: always
         environment:
             - PORT=3002
@@ -50,20 +49,15 @@ services:
             - USE_POSTGRES=${USE_POSTGRES:-false}
             - DB_HOST=postgres
             - DB_PORT=5432
-            - DB_NAME=zemfyre
+            - DB_NAME=iotistic
             - DB_USER=postgres
             - DB_PASSWORD=${DB_PASSWORD:-postgres}
             - DB_POOL_SIZE=20
             - GRAFANA_API_TOKEN=${GRAFANA_API_TOKEN}
             - DISPLAY=${DISPLAY}
             - DBUS_SESSION_BUS_ADDRESS=${DBUS_SESSION_BUS_ADDRESS}
-        volumes:
-          - /tmp/.X11-unix:/tmp/.X11-unix  # for X11
-          - /run/user/1000/bus:/run/user/1000/bus  # for D-Bus socket
-          - /var/run/docker.sock:/var/run/docker.sock:ro
-        user: "1000:1000"
         ports:
-            - "${API_PORT_EXT:-3002}:3002"
+            - "${API_PORT_EXT:-4002}:3002"
         depends_on:
             postgres:
                 condition: service_healthy
