--- a/api/package.json
+++ b/api/package.json
@@ -10,15 +10,25 @@
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist"
   },
-  "keywords": ["iot", "api", "docker", "grafana", "device-management"],
+  "keywords": [
+    "iot",
+    "api",
+    "docker",
+    "grafana",
+    "device-management"
+  ],
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dockerode": "^4.0.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
     "node-fetch": "^2.7.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.23",
     "@types/express": "^4.17.21",
