--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,6 @@
         "!**/node_modules/**"
       ],
       "env": {
-        "USE_REAL_DOCKER": "true",
         "CLOUD_API_ENDPOINT": "http://localhost:4002",
         "LOG_COMPRESSION": "true",
         "PROVISIONING_API_KEY": "your_provisioning_api_key_64_chars_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
@@ -38,8 +37,8 @@
       "restart": true,
       "sourceMaps": true,
       "env": {
-        "NODE_ENV": "development",
-        "USE_REAL_DOCKER": "false"
+        "NODE_ENV": "development"
+
       }
     },
     {
@@ -55,8 +54,7 @@
       "restart": true,
       "sourceMaps": true,
       "env": {
-        "NODE_ENV": "development",
-        "USE_REAL_DOCKER": "true"
+        "NODE_ENV": "development"
       }
     },
     {
@@ -72,8 +70,7 @@
       "restart": true,
       "sourceMaps": true,
       "env": {
-        "CLOUD_API_ENDPOINT": "http://localhost:8000",
-        "USE_REAL_DOCKER": "false"
+        "CLOUD_API_ENDPOINT": "http://localhost:8000"
       }
     },
     {
