feat(sensor-publish): Implement Sensor Publish feature for IoT devices
- Added documentation for the Sensor Publish feature, detailing its functionality, configuration, and usage.
- Created the SensorPublishFeature class to manage multiple sensors and publish data to MQTT.
- Developed the Sensor class to handle connections to Unix domain sockets and publish sensor data.
- Introduced configuration schemas using Zod for validation of sensor and publish configurations.
- Implemented buffering, batching, and heartbeat functionalities for robust data handling.
- Established event-driven architecture for sensor connection management and error handling.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,10 @@
       "env": {
         "CLOUD_API_ENDPOINT": "http://localhost:4002",
         "LOG_COMPRESSION": "true",
-        "PROVISIONING_API_KEY": "your_provisioning_api_key_64_chars_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+        "ENABLE_SENSOR_PUBLISH": "true",
+        "ENABLE_JOB_ENGINE": "true",
+        "PROVISIONING_API_KEY": "your_provisioning_api_key_64_chars_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "SENSOR_PUBLISH_CONFIG": "{\"sensors\":[{\"name\":\"sensor1\",\"addr\":\"/tmp/sensor1.sock\",\"eomDelimiter\":\"\\\\n\",\"mqttTopic\":\"sensor/data\",\"bufferSize\":100,\"bufferTimeMs\":1000}]}"
       }
     },
     {
