--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -95,8 +95,8 @@
   ansible.builtin.lineinfile:
     path: /etc/apt/sources.list.d/docker.list
     create: yes
+    regexp: '^deb .* https://download.docker.com/linux/debian .* stable$'
     line: "deb [arch={{ architecture }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian {{ docker_codename | trim }} stable"
-    insertafter: EOF
     state: present
 
 # Update apt cache
