refactor: Streamline Docker installation process by removing redundant checks and enhancing clarity

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -1,66 +1,75 @@
+
+# Clean up any broken Docker repository files from previous runs
+- name: Remove broken Docker repository files
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: absent
+  loop:
+    - /etc/apt/sources.list.d/docker.list
+    - /etc/apt/keyrings/docker.gpg
+  ignore_errors: true
+
+# Update apt cache after cleanup
+- name: Update apt cache after cleanup
+  ansible.builtin.apt:
+    update_cache: yes
+  ignore_errors: true
+
+# Check if Docker is already installed
 - name: Check if Docker is installed
-  command: docker --version
-  register: docker_check
-  failed_when: false
+  ansible.builtin.command: docker --version
+  register: docker_version
+  ignore_errors: true
   changed_when: false
 
-- name: Install Docker if not present
-  block:
-    - name: Download Docker installation script
-      get_url:
-        url: https://get.docker.com
-        dest: /tmp/get-docker.sh
-        mode: '0755'
+- name: Display Docker version if installed
+  ansible.builtin.debug:
+    msg: "Docker already installed: {{ docker_version.stdout }}"
+  when: docker_version.rc == 0
 
-    - name: Run Docker installation script
-      shell: /tmp/get-docker.sh
+# Install Docker using official convenience script
+# This script handles everything: GPG keys, repository setup, package installation
+- name: Install Docker using official script
+  ansible.builtin.shell: |
+    curl -fsSL https://get.docker.com -o /tmp/get-docker.sh
+    sh /tmp/get-docker.sh
+    rm /tmp/get-docker.sh
+  when: docker_version.rc != 0
+  register: docker_install
+  changed_when: true
 
-    - name: Add user to docker group
-      user:
-        name: "{{ kiosk_user }}"
-        groups: docker
-        append: yes
+- name: Display Docker installation output
+  ansible.builtin.debug:
+    msg: "{{ docker_install.stdout_lines }}"
+  when: docker_version.rc != 0 and docker_install.stdout_lines is defined
+  register: docker_install
+  changed_when: true
 
-    - name: Remove Docker installation script
-      file:
-        path: /tmp/get-docker.sh
-        state: absent
+- name: Display Docker installation output
+  ansible.builtin.debug:
+    msg: "{{ docker_install.stdout_lines }}"
+  when: docker_version.rc != 0 and docker_install.stdout_lines is defined
 
-    - name: Check Docker version
-      ansible.builtin.command: docker --version
-      register: docker_version
-      changed_when: false
-
-    - name: Show Docker version
-      ansible.builtin.debug:
-        msg: "{{ docker_version.stdout }}"
-  when: docker_check.rc != 0
-  become: true
-
-- name: Check Docker Compose availability
-  command: docker compose version
-  register: docker_compose_check
-  failed_when: false
+# Verify Docker installation
+- name: Verify Docker installation
+  ansible.builtin.command: docker --version
+  register: docker_verify
   changed_when: false
 
-- name: Run Docker Compose (Headless mode with Pi override)
-  community.docker.docker_compose_v2:
-    project_src: "{{ repo_dir }}"
-    files:
-      - docker-compose.yaml
-    state: present
-    build: always
-  become: true
-  register: compose_output
+- name: Display Docker version after installation
+  ansible.builtin.debug:
+    msg: "✅ Docker installed: {{ docker_verify.stdout }}"
 
-- name: Prune unused Docker images (dangling only)
-  community.docker.docker_prune:
-    images: true
-    images_filters:
-      dangling: "true"
+# Ensure Docker service is enabled and running
+- name: Enable and start Docker service
+  ansible.builtin.systemd:
+    name: docker
+    enabled: true
+    state: started
 
-- name: Print Docker Compose output
-  debug:
-    msg: "{{ compose_output }}"
-  when: compose_output is defined
-
+# Add user to Docker group
+- name: Add current user to Docker group
+  ansible.builtin.user:
+    name: "{{ lookup('env', 'USER') }}"
+    groups: docker
+    append: true
