--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "dockerode": "^4.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
+    "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
     "winston": "^3.18.3"
@@ -34,6 +35,7 @@
     "@types/dockerode": "^3.3.23",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/node-cron": "^3.0.11",
     "@types/node-fetch": "^2.6.9",
     "@types/pg": "^8.10.9",
     "ts-node": "^10.9.2",
