--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "dockerode": "^4.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
+    "mqtt": "^5.14.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
@@ -34,7 +35,7 @@
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.23",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.19.22",
     "@types/node-cron": "^3.0.11",
     "@types/node-fetch": "^2.6.9",
     "@types/pg": "^8.10.9",
