Add sensor simulator with local agent setup and quick start guide
- Implemented sensor simulator to generate BME688 environmental data.
- Added support for Unix domain sockets for communication.
- Created detailed documentation for running the simulator with a local agent.
- Included troubleshooting steps and configuration options.
- Established a quick start guide for easy setup using Docker Compose.
- Added socket ignore file to prevent tracking of socket files in version control.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,38 @@
 # Environment Variables Template
 # Copy this file to .env and update with your actual values
 
+# ========================================
+# Sensor Simulator Configuration
+# ========================================
+
+# Number of simulated sensors (creates sensor1.sock, sensor2.sock, etc.)
+SIM_NUM_SENSORS=3
+
+# Data publish interval in milliseconds (60000 = 1 minute)
+SIM_PUBLISH_INTERVAL_MS=60000
+
+# Enable random sensor failures for testing
+SIM_ENABLE_FAILURES=true
+
+# Failure probability per publish interval (0.05 = 5%)
+SIM_FAILURE_CHANCE=0.05
+
+# Delay before recovery after failure in milliseconds (10000 = 10 seconds)
+SIM_RECONNECT_DELAY_MS=10000
+
+# Data output format: json or csv
+SIM_DATA_FORMAT=json
+
+# End-of-message delimiter (use \n for newline)
+SIM_EOM_DELIMITER=\n
+
+# Logging level: debug, info, warn, error
+SIM_LOG_LEVEL=info
+
+# ========================================
 # Grafana Configuration
+# ========================================
+
 GRAFANA_USERNAME=admin
 GRAFANA_PASSWORD=your-secure-password-here
 GRAFANA_AUTH_ANONYMOUS_ENABLED=true
