--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,95 +28,43 @@ services:
             - SSH_KEY_PATH=${SSH_KEY_PATH:-/app/data/ssh/id_rsa}
             - SSH_AUTO_RECONNECT=${SSH_AUTO_RECONNECT:-true}
             - SSH_RECONNECT_DELAY=${SSH_RECONNECT_DELAY:-5000}
-    nginx:
-        image: nginx
-        ports:
-        - "80:80"
-        command: ["nginx", "-g", "daemon off;"]
-        restart: unless-stopped
-        volumes:
-        - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-        networks:
-           - zemfyre-net
-    mosquitto:
-        image: eclipse-mosquitto
-        restart: always
-        ports:
-          - "${MOSQUITTO_PORT_EXT:-1883}:1883"
-          - "${MOSQUITTO_WS_PORT_EXT:-59001}:9001"
-        volumes:
-          - ./mosquitto/config:/mosquitto/config/
-        networks:
-           - zemfyre-net
-    nodered:
-        build:
-            context: ./nodered
-            dockerfile: Dockerfile
-        restart: always
-        ports:
-            - "${NODERED_PORT_EXT:-51880}:1880"
-        volumes:
-            - ./nodered/data:/data
-            - ./nodered/nodes:/data/nodes
-            - /data/node_modules
-        networks:
-           - zemfyre-net
 
-    influx:
-        container_name: influxdb
-        image: influxdb:alpine
+    ml-service:
+        build:
+           context: ./ml-service
+           dockerfile: Dockerfile
+        container_name: ml-service
         restart: always
         environment:
-            - INFLUXDB_INIT_ORG=Zemfyre
-            - INFLUXDB_INIT_BUCKET=ZUS80LP
-            - INFLUXDB_LOG_LEVEL=debug
+            - DB_HOST=postgres
+            - DB_PORT=5432
+            - DB_NAME=${DB_NAME:-iotistic}
+            - DB_USER=${DB_USER:-postgres}
+            - DB_PASSWORD=${DB_PASSWORD:-postgres}
+            - ML_SERVICE_PORT=5000
+            - MODEL_DIR=/app/models/saved
+            - MIN_TRAINING_SAMPLES=100
+            - ISOLATION_FOREST_CONTAMINATION=0.01
+            - LSTM_SEQUENCE_LENGTH=50
+            - LSTM_FORECAST_HORIZON=12
         ports:
-            - "${INFLUXDB_PORT_EXT:-58086}:8086"
+            - "5000:5000"
         volumes:
-            - ./influx/data:/var/lib/influxdb2
-            - ./influx/config:/etc/influxdb2
+            - ml-models:/app/models/saved
         networks:
            - zemfyre-net
-
-    grafana:
-        build:
-           context: ./grafana
-           dockerfile: Dockerfile
         depends_on:
-            - influx
-        container_name: grafana
-        restart: always
-   
-        user: "grafana"
-        environment:
-            - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
-            - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
-            - GF_AUTH_ANONYMOUS_ENABLED=${GRAFANA_AUTH_ANONYMOUS_ENABLED}
-            - GF_AUTH_ANONYMOUS_ORG_ROLE=${GRAFANA_AUTH_ANONYMOUS_ORG_ROLE}
-            - GF_AUTH_DISABLE_LOGIN_FORM=${GRAFANA_AUTH_DISABLE_LOGIN_FORM}
-            - GF_HTTP_ALLOW_ORIGIN=*
-        ports:
-            - "${GRAFANA_PORT_EXT:-53000}:3000"
-        networks:
-           - zemfyre-net
-
-    admin:
-        build:
-           context: ./admin
-           dockerfile: Dockerfile
-        container_name: admin
-        restart: always
-        environment:
-            - APP_MANAGER_API=http://localhost:3002/api/v1
-            - USE_MOCK_DATA=true
-        ports:
-            - "${ADMIN_PORT_EXT:-51850}:80"
-        networks:
-           - zemfyre-net
+            - postgres
+        healthcheck:
+            test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5000/health')"]
+            interval: 30s
+            timeout: 10s
+            retries: 3
+            start_period: 30s
 
     
 volumes:
-  application-manager-data:
+  ml-models:
     driver: local
  
 networks:
