Add comprehensive ML service setup and training documentation
- Created QUICK-START-TRAINING.md for step-by-step model training guide.
- Developed SETUP-FIXED.md to address PostgreSQL connection issues and provide setup instructions.
- Introduced TRAINING-READY.md to summarize resolved issues and expected training results.
- Implemented check-device-data.ps1 to verify device shadow history for ML training.
- Added diagnose-data.ps1 for diagnosing device shadow history data.
- Created run-local.ps1 for running the ML service locally with PostgreSQL.
- Developed test-training.ps1 for automated testing of ML training setup.
- Updated SQL queries and dynamic feature selection in data_fetcher.py and anomalies.py to match actual data structure.
- Enhanced error handling and troubleshooting guidance across scripts.

--- a/ml-service/docker-compose.yml
+++ b/ml-service/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "${ML_SERVICE_PORT:-5000}:5000"
     environment:
       # Database Configuration (connect to existing PostgreSQL)
-      - DB_HOST=${DB_HOST:-localhost}
+      - DB_HOST=${DB_HOST:-postgres}
       - DB_PORT=${DB_PORT:-5432}
       - DB_NAME=${DB_NAME:-iotistic}
       - DB_USER=${DB_USER:-postgres}
@@ -51,7 +51,7 @@ services:
       # - /app/__pycache__
     
     networks:
-      - ml-network
+      - zemfyre-net
     
     healthcheck:
       test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5000/health')"]
@@ -80,8 +80,6 @@ volumes:
     #   device: ./models/saved
 
 networks:
-  ml-network:
-    driver: bridge
-    # Optional: Connect to external network (e.g., main application network)
-    # external: true
-    # name: zemfyre-net
+  zemfyre-net:
+    external: true
+    name: zemfyre-net
