--- a/api/package.json
+++ b/api/package.json
@@ -23,12 +23,14 @@
     "device-management"
   ],
   "dependencies": {
+    "@types/is-utf8": "^0.2.3",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dockerode": "^4.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
+    "is-utf8": "^0.2.1",
     "mqtt": "^5.14.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
