feat: Add Process Metrics API and Dashboard Integration
- Implemented API endpoints for retrieving current and historical process metrics.
- Created documentation for Process Metrics API.
- Updated database schema to include top_processes JSONB column.
- Enhanced agent to collect and report top process data.
- Integrated real-time process monitoring in the dashboard with auto-refresh.
- Added historical data visualization for process trends in the dashboard.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -60,6 +60,8 @@
             "DB_POOL_SIZE":"20",
             "FORCE_COLOR":"1",
             "MQTT_BROKER_URL":"mqtt://localhost:5883",
+            "MQTT_PERSIST_TO_DB":"true",
+            "MQTT_DB_SYNC_INTERVAL": "10000"
       }
     }
   ]
