--- a/api/.env.example
+++ b/api/.env.example
@@ -21,3 +21,15 @@ DOCKER_SOCKET_PATH=/var/run/docker.sock
 
 # Optional: Authentication
 # API_KEY=your-secret-api-key-here
+
+# Image Monitor Configuration
+# Enable/disable Docker Hub image monitoring (default: true)
+IMAGE_MONITOR_ENABLED=true
+# Check interval in minutes (default: 60)
+IMAGE_MONITOR_INTERVAL_MINUTES=60
+
+# Trivy Security Scanner Configuration
+# Enable/disable Trivy vulnerability scanning (default: true)
+TRIVY_ENABLED=true
+# Auto-reject images with critical vulnerabilities (default: false)
+TRIVY_AUTO_REJECT_CRITICAL=false
