feat: Complete MQTT credentials integration and restore migration state
- Removed QUICK-REFERENCE.md and REORGANIZATION-SUMMARY.md as part of documentation cleanup.
- Added fix-migrations.js and mark-migration-complete.js scripts to manage migration state.
- Created migration 20251020000000_add_mqtt_credentials.js to add MQTT credential fields to the device table.
- Updated agent provisioning types to include mqttUsername, mqttPassword, and mqttBrokerUrl.
- Modified device-manager to load and save MQTT credentials from the database.
- Enhanced supervisor to utilize provisioned MQTT credentials with environment variable fallback.
- Documented the complete integration process in MQTT-CREDENTIALS-RESTORE-COMPLETE.md.
- Ensured all migrations are in sync and verified successful integration of MQTT credentials during device provisioning.

--- a/api/mosquitto.conf
+++ b/api/mosquitto.conf
@@ -1,16 +1,59 @@
-# Mosquitto configuration for development
-# Allow anonymous connections (for development only)
+# Mosquitto configuration with Go-Auth plugin
+# PostgreSQL backend for authentication and ACL
 
-# Main MQTT listener - bind to all interfaces
+# Basic Mosquitto settings
 listener 1883 0.0.0.0
-allow_anonymous true
-allow_zero_length_clientid true
+protocol mqtt
 
-# WebSocket listener - bind to all interfaces
 listener 9001 0.0.0.0
 protocol websockets
-allow_anonymous true
+
+# Disable anonymous access (require authentication)
+allow_anonymous false
 
 # Logging
 log_dest stdout
-log_type all
+log_type error
+log_type warning
+log_type notice
+log_type information
+log_type debug
+
+# Load Go-Auth plugin
+auth_plugin /mosquitto/go-auth.so
+
+# Backend configuration
+auth_opt_backends postgres
+
+# PostgreSQL connection settings
+auth_opt_pg_host postgres
+auth_opt_pg_port 5432
+auth_opt_pg_dbname iotistic
+auth_opt_pg_user postgres
+auth_opt_pg_password postgres
+auth_opt_pg_sslmode disable
+
+# User authentication query
+# Returns password_hash for the given username
+auth_opt_pg_userquery SELECT password_hash FROM mqtt_users WHERE username = $1 AND is_active = true LIMIT 1
+
+# ACL check query (FIXED: Removed GROUP BY to avoid priority column error)
+# Returns 1 if user has permission, 0 otherwise
+# Checks if there's any ACL entry that grants access
+auth_opt_pg_aclquery SELECT COUNT(*) FROM mqtt_acls WHERE username = $1 AND rw >= $2 AND ($3 = topic OR topic = '#' OR $3 LIKE REPLACE(REPLACE(topic, '+', '_'), '#', '%'))
+
+# Superuser query (optional - returns 1 if user is superuser)
+auth_opt_pg_superquery SELECT COUNT(*) FROM mqtt_users WHERE username = $1 AND is_superuser = true
+
+# Password hashing
+auth_opt_pw_hash_algorithm bcrypt
+auth_opt_pw_hash_cost 10
+
+# Cache settings (optional - improves performance)
+auth_opt_cache true
+auth_opt_cache_reset true
+auth_opt_cache_ttl 300
+
+# Logging level (debug for troubleshooting, change to info in production)
+auth_opt_log_level debug
+auth_opt_log_dest stdout
