Restore and enhance MQTT authentication and provisioning code after merge conflict resolution
- Recovered MQTT credential generation in the API, including username and password hashing.
- Updated provisioning response format to include nested MQTT credentials.
- Enhanced device manager to extract and store MQTT credentials from the API response.
- Fixed mosquitto-go-auth configuration issues related to ACL queries and password hashing.
- Restored and documented the MQTT ACL migration script, including database schema and default rules.
- Implemented automatic device provisioning with MQTT user creation and ACL assignment.
- Added comprehensive documentation for all restored features and security best practices.

--- a/api/mosquitto.conf
+++ b/api/mosquitto.conf
@@ -37,22 +37,25 @@ auth_opt_pg_sslmode disable
 # Returns password_hash for the given username
 auth_opt_pg_userquery SELECT password_hash FROM mqtt_users WHERE username = $1 AND is_active = true LIMIT 1
 
-# ACL check query (FIXED: Removed GROUP BY to avoid priority column error)
-# Returns 1 if user has permission, 0 otherwise
-# Checks if there's any ACL entry that grants access
-auth_opt_pg_aclquery SELECT COUNT(*) FROM mqtt_acls WHERE username = $1 AND rw >= $2 AND ($3 = topic OR topic = '#' OR $3 LIKE REPLACE(REPLACE(topic, '+', '_'), '#', '%'))
+# ACL check query for mosquitto-go-auth with PostgreSQL
+# Parameters passed by mosquitto-go-auth: $1 = username, $2 = topic, $3 = clientid, $4 = acc
+# BUT: PostgreSQL backend only passes $1 (username) and $2 (acc) 
+# The plugin will pattern-match returned topics against the requested topic
+# access column values: 1=read, 2=write, 3=read+write, 4=subscribe
+auth_opt_pg_aclquery SELECT topic FROM mqtt_acls WHERE username = $1 AND (access & $2) != 0
 
 # Superuser query (optional - returns 1 if user is superuser)
 auth_opt_pg_superquery SELECT COUNT(*) FROM mqtt_users WHERE username = $1 AND is_superuser = true
 
-# Password hashing
-auth_opt_pw_hash_algorithm bcrypt
-auth_opt_pw_hash_cost 10
+# Password hashing configuration for mosquitto-go-auth
+auth_opt_hasher bcrypt
+auth_opt_hasher_cost 10
+auth_opt_hasher_salt_size 16
 
 # Cache settings (optional - improves performance)
-auth_opt_cache true
-auth_opt_cache_reset true
-auth_opt_cache_ttl 300
+# auth_opt_cache true
+# auth_opt_cache_reset true
+# auth_opt_cache_ttl 300
 
 # Logging level (debug for troubleshooting, change to info in production)
 auth_opt_log_level debug
