--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "@types/is-utf8": "^0.2.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "is-utf8": "^0.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.14.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
