--- a/billing/package.json
+++ b/billing/package.json
@@ -10,7 +10,9 @@
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist",
     "migrate": "psql $DATABASE_URL -f migrations/001_initial_schema.sql",
-    "generate-keys": "tsx scripts/generate-keys.ts"
+    "generate-keys": "tsx scripts/generate-keys.ts",
+    "customer": "tsx scripts/customer-manager.ts",
+    "usage": "tsx scripts/usage-viewer.ts"
   },
   "keywords": [
     "billing",
@@ -27,7 +29,9 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^16.3.1",
     "winston": "^3.18.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "axios": "^1.12.2",
+    "commander": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
