--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "cron": "^4.3.3",
     "dockerode": "^4.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.17",
+    "@types/cron": "^2.4.3",
     "@types/dockerode": "^3.3.23",
     "@types/express": "^4.17.21",
     "@types/node": "^20.19.22",
