--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/is-utf8": "^0.2.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -38,6 +39,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3"
   },
   "devDependencies": {
