--- a/billing/package.json
+++ b/billing/package.json
@@ -21,30 +21,32 @@
     "licensing"
   ],
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/express-rate-limit": "^5.1.3",
+    "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
+    "commander": "^11.1.0",
     "cors": "^2.8.5",
-    "stripe": "^14.9.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
-    "bcrypt": "^6.0.0",
-    "dotenv": "^16.3.1",
-    "winston": "^3.18.3",
+    "stripe": "^14.9.0",
     "uuid": "^9.0.1",
-    "axios": "^1.12.2",
-    "commander": "^11.1.0"
+    "winston": "^3.18.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/pg": "^8.10.9",
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.22",
+    "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
     "rimraf": "^5.0.5",
-    "tsx": "^4.7.0"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
