feat: Enhanced Stripe webhook handling and Docker Compose configuration
- Add Stripe CLI integration for local webhook testing
- Implement webhook handlers for subscription lifecycle events
- Add customer lookup by Stripe customer ID
- Use environment variables for all Stripe configuration
- Add comprehensive Stripe CLI usage documentation
- Update .env.example with placeholder values (no secrets)

--- a/billing/.env.example
+++ b/billing/.env.example
@@ -6,9 +6,15 @@ NODE_ENV=development
 DATABASE_URL=postgresql://postgres:password@localhost:5432/zemfyre_billing
 
 # Stripe
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_PUBLISHABLE_KEY=pk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Get this from: docker logs billing-stripe-cli (look for "Ready! Your webhook signing secret is whsec_...")
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Stripe Product Price IDs (create these in Stripe Dashboard under Products)
+STRIPE_PRICE_STARTER=price_your_starter_price_id
+STRIPE_PRICE_PROFESSIONAL=price_your_professional_price_id
+STRIPE_PRICE_ENTERPRISE=price_your_enterprise_price_id
 
 # JWT License Signing (RS256 - Use generated keys)
 LICENSE_PRIVATE_KEY_PATH=./keys/private-key.pem
