--- a/charts/customer-instance/Chart.yaml
+++ b/charts/customer-instance/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: customer-instance
-description: Iotistic Sensor Customer Instance - IoT monitoring stack
+description: Iotistic Customer Instance - IoT monitoring stack
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
