--- a/billing/docker-compose.yml
+++ b/billing/docker-compose.yml
@@ -43,6 +43,13 @@ services:
       PORT: 3100
       DATABASE_URL: postgres://billing:billing123@postgres:5432/billing
       
+      # Database connection for migrations
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: billing
+      DB_PASSWORD: billing123
+      DB_NAME: billing
+      
       # Redis (for deployment queue)
       REDIS_HOST: redis
       REDIS_PORT: 6379
@@ -70,7 +77,7 @@ services:
       DEFAULT_TRIAL_DAYS: 14
       
       # Kubernetes deployment
-      BASE_DOMAIN: iotistic.cloud
+      BASE_DOMAIN: iotistic.ca
       HELM_CHART_PATH: /app/charts/customer-instance
       # Set to 'true' for local testing without K8s cluster (simulates deployment)
       SIMULATE_K8S_DEPLOYMENT: ${SIMULATE_K8S_DEPLOYMENT:-true}
