Update Docker tag in build-dashboard.yml

--- a/.github/workflows/build-dashboard.yml
+++ b/.github/workflows/build-dashboard.yml
@@ -51,4 +51,4 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache/${{ matrix.board }}
           cache-to: type=local,dest=/tmp/.buildx-cache/${{ matrix.board }},mode=max
           tags: |
-            iotistic/dashboard:latest-${{ matrix.board }}
+            iotistic/dashboard:latest
